--- a/main.css
+++ b/main.css
@@ -1,12 +1,32 @@
 body {
+  background-color: rgb(191,87,0,.3);
   margin: auto;
   display: block;
   justify-content: center;
   text-align: center;
+  max-width: 80%;
+  margin-top: 20px;
+}
+
+.header {
+  margin-top: 40px;
+}
+
+.searchBar {
+min-height: 35px; 
+}
+
+.searchBtn {
+  border: none;
+  background-color: rgb(191,87,0);
+  padding: 15px 35px;
+  font-size: 22px;
+  font-weight: 300;
 }
 
 .userInput {
   margin-top: 50px;
+
 }
 
 h1 {
@@ -18,9 +38,10 @@ dt {
   text-align: center;
 }
 
-dd {
+.title {
   justify-content: center;
   font-size: 45px;
+  min-height: 75px;
 }
 
 dd#extra {
@@ -31,8 +52,29 @@ img {
   max-width: 400px;
 }
 
-.carousel {
-  display: inline-block;
+.banner {
+  max-width: 700px;
 }
 
-/*
+#estab {
+  margin-top: 5px;
+  margin-bottom: 7px;
+  font-size: 20px;
+}
+
+.carousel {
+  display: inline-block;
+  margin-top: 15px;
+}
+
+.pic1 {
+  display: none;
+}
+
+.pic2 {
+  display: none;
+}
+
+.bio {
+  display: none;
+}
