--- a/main.css
+++ b/main.css
@@ -1,3 +1,11 @@
+body{
+  max-width: 95%;
+  margin-top: 10px;
+  
+}
+
+@media (min-width: 600px) {
+
 body {
   background-color: rgb(191,87,0,.3);
   margin: auto;
@@ -44,12 +52,15 @@ dt {
   min-height: 75px;
 }
 
-dd#extra {
-  font-size: 15px;
+.placeholder {
+  line-height: 300px;
+  background-color: white;
+  justify-content: center;
 }
 
 img {
   max-width: 400px;
+  background: none;
 }
 
 .banner {
@@ -77,4 +88,14 @@ img {
 
 .bio {
   display: none;
+}
+
+.modal {
+  justify-content: center;
+  display: none;
+  position: fixed;
+  max-width: 80%;
+  height: auto;
+  background-color: grey;
+}
 }
