--- a/main.css
+++ b/main.css
@@ -93,11 +93,53 @@ img {
 }
 
 .modal {
-  justify-content: center;
   display: none;
   position: fixed;
-  max-width: 80%;
-  height: auto;
-  background-color: grey;
+  z-index: 1;
+  top: 0;
+  width: 80%;
+  height: 80%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.8);
+  animation-duration: 0.4s
 }
+
+.modal-content {
+  position: fixed;
+  bottom: 0;
+  background-color: #fefefe;
+  width: 100%;
+}
+
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: #5cb85c;
+  color: white;
+}
+
+.modal-body {padding: 2px 16px;
+}
+
+.discoList {
+  list-style: none;
+  color: white;
+  font-weight: bolder;
+}
+.disco {
+  justify-content: center;
 }
